--- a/03. Managing Social and Human Capital/Module 4 Designing and Changing the Organization's Architecture/4.6 Manager's Template for Human and Social Capital.md
+++ b/03. Managing Social and Human Capital/Module 4 Designing and Changing the Organization's Architecture/4.6 Manager's Template for Human and Social Capital.md
@@ -1,70 +1,73 @@
 ## Coursera 商业基础课程《管理社会与人力资本》 - 模块4 - 组织架构设计与变革
 
-### 课程4.6 组织架构设计的系统化框架
+### 课程4.6 管理者的人力与社会资本行动框架
 
-通过整合思科、Hausser Foods、消防队救援案例等多元场景，构建管理者在人力与社会资本管理中的**系统性思维工具包**，聚焦架构设计、公平感知与变革韧性三大维度。
+整合组织架构设计、人员管理与变革领导力的核心原则，提出**管理者人力与社会资本模板**，强调通过**系统性架构设计**与**情感理性平衡**激发团队潜能，并结合实际案例（如Cisco、Schwab、沃尔玛）阐释其应用逻辑。
 
-#### 1. 决策架构：信任与赋能的平衡术
+#### 1. 管理者人力与社会资本八大行动步骤
 
-- **离线信任网络**：  
-  - 参考思科John Chambers模式，建立**影子决策委员会**（Shadow Board）——由跨层级员工组成非正式顾问团，在重大决策前提供非结构化反馈（如每月匿名「挑战者会议」）。
-- **意图传导三原则**：  
-  - **70/30法则**：70%目标明确性（如「东南亚市场份额提升15%」），30%保留执行弹性；  
-  - **红线禁区**：明确不可逾越的边界（如「不牺牲客户数据安全」）；  
-  - **失败信用证**：预设可接受的试错成本（如「允许新市场拓展首年亏损500万美元」）。
+**[根据幻灯片提炼]**  
+1. **70%信心决策（Consult with trusted associates, decide when 70% confident）**  
+   1.  **实践意义**：避免「过度分析瘫痪」，在信息不完全时依赖可信顾问（如Cisco的John Chambers通过核心团队快速决策）。  
+   2. **案例**：消防队长Wagner Dodge在火灾中因团队缺乏信任未能执行关键指令，凸显预先建立信任的必要性。  
 
-#### 2. 团队动力学：陌生协作的激活密码
+2. **战略意图传达（Convey strategic intent, avoid micro-managing）**  
+   1. **关键原则**：明确目标后赋权执行，避免微观管理窒息创新（如Schwab降价变革中David赋予区域团队自主权）。  
 
-- **消防队悖论解析**：  
-  - Wagner Dodge救援失败案例揭示：**紧急情境下，关系资本 > 专业能力**。应建立：  
-    - **预联结机制**：关键岗位（如危机管理组）实施强制轮岗，确保核心成员每年共同完成至少2个模拟项目；  
-    - **信任加速器**：设计48小时生存挑战等极端场景培训，催化团队信任。
+3. **前瞻性决策准备（Prepare self and team for good and timely decisions before needed）**  
+   1. **方法论**：通过模拟危机（如消防队预演）或轮岗培养全局视野，减少紧急决策失误。  
 
-#### 3. 变革韧性：架构迭代的生命周期
+4. **构建决策型管理思维（Create a management mindset for good and timely decisions）**  
+   1. **HP前CEO Ann Livermore启示**：容忍「足够好」的决策而非追求完美，鼓励试错文化。  
 
-- **不平等管理仪表盘**：  
-  监控三类公平感知指标：  
+5. **设计激励性组织架构（Design the organization’s architecture to motivate and align people）**  
+   1. **正反案例**：  
+      1. **Hauser Foods**：原职能型架构导致执行低效，分权化设计后责任明晰。  
+      2. **沃尔玛**：超扁平化架构（220万员工）需依赖标准化流程与跨团队协作机制。  
 
-  | **公平维度** | **监控指标**                  | **干预阈值**          |  
-  |--------------|-----------------------------|---------------------|  
-  | **分配公平** | 同职级薪酬离散系数 >0.25      | 启动薪酬校准项目       |  
-  | **程序公平** | 晋升申诉率同比增超30%        | 开展晋升流程透明化审计 |  
-  | **互动公平** | 跨部门协作满意度 <60分       | 植入关系修复协调员角色 |  
+6. **目标一致性校准（Bring teams, compensation, promotion into pulling in the same direction）**  
+   1. **失败教训**：薪酬与战略脱钩（如Schwab客户服务代表未因新客户增长获奖）导致内部博弈。  
 
-- **架构韧性指数**：  
-  通过四象限评估组织架构的环境适应力： 
+7. **减少系统性不公（Reduce inequity in pay, promotion, and other organizational features）**  
+   1. **行为经济学洞见**：薪酬/晋升不公引发「相对剥夺感」（参考NBA球员因感知低薪消极比赛）。  
 
-  ```  
-  韧性指数 = （客户需求响应速度 × 内部创新试错率） / （部门墙强度 × 决策层级数）  
-  ```  
-  **健康阈值**：指数 ≥1.5，低于1.0需启动架构重组。
+8. **「理性+情感」变革管理（Manage organization change with both “head and heart”）**  
+   1. **Schwab实践**：金门大桥行走仪式激活情感认同，数据论证说服理性决策。  
 
-#### 4. 管理者工具包：三阶变革加速器
+#### 2. 管理启示与行动框架
 
-1. **预热期：铸造紧迫感**
-   1. **燃烧平台2.0**：  
-      1. 超越传统危机叙事，构建**数据剧场**——将行业颠覆数据（如竞品增长率）转化为VR沉浸式体验，使抽象威胁可感化。
-   2. **幽灵推演**：  
-      1. 邀请外部行业颠覆者（如初创公司CEO）参与战略会，模拟未来3年攻防战。
+1. **架构设计的动态平衡**  
+   1. **灵活性**：预留架构接口（如模块化IT系统），适应市场突变（如数字化冲击）。  
+   2. **一致性**：确保薪酬、晋升与战略目标强关联（如Schwab将客服绩效与新客户绑定）。  
 
-2. **推进期：跨维对齐**
-   1. **决策溯源系统**：  
-      1. 重要决策植入区块链存证，可追溯每位参与者的建议贡献度，破解「决策失忆症」。
-   2. **反KPI联盟**：  
-      1. 设立20%的「模糊目标」（如「重新定义客户体验」），考核标准由跨职能团队动态制定。
+2. **不公平感知的预防策略**  
+   1. **透明机制**：公开晋升标准（如学历与绩效权重），定期匿名调研员工公平感知。  
+   2. **动态对标**：薪酬水平与行业/内部同级岗位持续校准，避免「薪酬压缩」（如新老员工倒挂）。  
 
-3. **固化期：文化编码**
-   1. **仪式货币化**：  
-      1. 将关键变革仪式（如金门大桥徒步）转化为NFT徽章，纳入晋升积分体系。
-   2. **逆权威日**：  
-      1. 每月设定一天「决策反转期」，允许基层员工否决管理层非关键决策，培养变革共治感。
+3. **变革领导力的双重维度**  
+   1. **理性杠杆**：数据叙事（如Schwab用E-Trade增长数据制造紧迫感）。  
+   2. **情感杠杆**：象征性仪式（如统一夹克、集体里程碑合影）强化归属感。  
 
----
+#### 3. 经典案例深度解析
 
-#### 核心洞见
+1. **Schwab降价变革的成败关键**  
+   1. **成功要素**：  
+      1. **架构弹性**：整合全服务与线上业务，消除内部蚕食。  
+      2. **文化符号**：金门大桥隐喻将财务目标转化为使命叙事。  
+   2. **风险警示**：未预设股价暴跌缓冲机制（如短期流动性储备），加剧初期压力。  
 
-**组织架构不是设计的产物，而是集体选择的化石。**  
-真正的架构创新始于**认知破壁**——通过制造可控的决策冲突（如「影子董事会vs执行层辩论」）、设计非舒适区的协作实验（如极端场景模拟），迫使组织突破路径依赖。管理者应成为**社会资本工程师**，而非结构设计师，重点在于培育信任网络、重构权力流动模式，让架构在动态博弈中自然进化。
+2. **沃尔玛的超大规模管理挑战**  
+   1. **架构策略**：  
+      1. **标准化中枢**：总部集中采购与物流，保障成本优势。  
+      2. **区域分权**：地方团队根据社区需求调整货架陈列，平衡效率与灵活性。  
+
+#### 4. 关键结论
+
+1. **「70%法则」**：过度追求确定性将错失变革窗口，信任核心团队比等待完美信息更重要。  
+2. **「架构即文化」**：组织设计无形中塑造行为模式（如集权架构抑制创新），需与价值观同步迭代。  
+3. **「不公即成本」**：薪酬/晋升不透明导致的隐性流失（如员工消极、离职）远高于短期节省。  
+
+**行动号召**：定期以「管理者模板」八步进行组织健康度扫描，将架构调整纳入战略例会固定议题，确保人力与社会资本持续适配业务进化。
 
 ---
 
@@ -91,6 +94,18 @@ Learning Objectives
 字幕文本：
 
 And by way of summary, briefly just to put words in what you see there. Going back to John Chambers at Cisco, our topic was making good and timely decisions. Finding people around you to whom you can turn for offline trusted feedback. You do need to think about where you want to go. Let people below you well picked, well trained, good job design, appropriately paid to work out the execution.
+
+[SLIDE]
+The Manager’s Template for Human and Social Capital
+1. Consult with trusted associates, decide when 70% confident.
+2. Convey strategic intent, avoid micro-managing.
+3. Prepare self and team for good and timely decisions before needed.
+4. Create a management mindset for good and time decisions.
+5. Design the organization’s architecture to motivate and align people.
+6. Bring teams, compensation, promotion into pulling in the same direction.
+7. Reduce inequity in pay, promotion, and other organizational features.
+8. Manage organization change with both “head and heart.” 
+[SLIDE]
 
 Breathing down their neck is going to undercut that, so convey intent with no micro-managing. Number three, think about that firefighting team that went into that fire setting in Montana. They had never worked with each other before, and there's an argument, I think it's right. Had they known each other, had they trusted each other before they got there, the number two person, name was Robert Sallee, would have more likely followed the huge management decision by the Incident Commander, Wagner Dodge, when he created a life saving fire. What's called an escape fire now, but he couldn't manage people to get into that, because they barely knew Wagner Dodge, the boss.
 
