--- a/04. Introduction to Corporate Finance/Module 1 Time Value of Money/1.1 Intuition and Discounting.md
+++ b/04. Introduction to Corporate Finance/Module 1 Time Value of Money/1.1 Intuition and Discounting.md
@@ -1,53 +1,74 @@
-### 模块总结：Week 1 - 货币的时间价值（Time Value of Money）
+## Coursera 商业基础课程《企业财务导论》 - 模块1 - 货币的时间价值
 
-#### **核心概念**
-1. **货币的时间价值本质**  
-   - 不同时间点的货币如同不同货币（如美元与欧元），不可直接相加，需通过“时间汇率”（即折现率）转换到同一时间单位后才能比较或汇总。
-   - **关键规则**：永远不要直接加减不同时间点的现金流（Cash Flow）。
+### 课程1.1 直觉与贴现
 
-2. **工具与方法**  
-   - **时间轴（Timeline）**：可视化工具，标注不同时间点的现金流（CF₀, CF₁, CF₂等），帮助明确资金流动的时间分布。
-   - **折现因子（Discount Factor）**：公式为 \( \frac{1}{(1+R)^t} \)，用于将未来现金流转换为当前价值。  
-     - **R（折现率）**：反映资本市场上同等风险投资的回报率，亦称机会成本、门槛率或资本成本。其大小与现金流风险正相关（高风险对应高折现率）。
-     - **t**：时间周期数（未来为正值，过去为负值）。
+#### 1. 核心概念
 
-3. **现值（Present Value, PV）**  
-   - 未来现金流在当前时间点的价值，计算公式为 \( PV = \frac{CF_t}{(1+R)^t} \)。
-   - **应用场景**：计算当前需储蓄的金额以满足未来定期支出（如例题中需存入$354.60以每年提取$100，持续4年，利率5%）。
+1. **货币时间价值的本质**
+   1. 不同时间点的货币如同不同货币单位（如美元、欧元），不可直接相加。必须通过「时间汇率」（即**贴现率**）将其转换为同一时间单位的价值（如现值）后才能比较或汇总。
+
+2. **时间轴（Timeline）工具**
+   1. 时间轴用于直观展示现金流（CF）在不同时间点的分布，下标表示时间（如CF₀为当前现金流，CF₁为第1期末的现金流）。  
+      1. **关键习惯**：任何财务问题先画时间轴，明确现金流的时点与方向。
+
+3. **贴现因子（Discount Factor）与贴现率（R）**
+   1. **贴现因子公式**：$1/(1+R)^t$，用于将未来现金流转换为现值（t为未来期数）
+      1. **贴现率（R）的定义**：  
+         1. 代表资本市场上同等风险投资的回报率，也称机会成本、门槛率。  
+         2. 风险越高，R越大（如股票风险>国债，回报率要求更高）。
+
+#### 2. 关键规则与操作
+
+1. **禁止跨期相加现金流**  
+   1. **绝对规则**：不同时间点的现金流不可直接相加（即使时间相近）。必须通过贴现统一时间单位后再汇总。
+
+2. **现值（Present Value, PV）计算**  
+   1. 步骤：  
+      1. 将各期现金流用贴现因子逐期折现至当前时点（t=0）。  
+      2. 汇总所有现值得到总现值。  
+   2. **公式**：  
+     \[
+     PV = \frac{CF_1}{(1+R)^1} + \frac{CF_2}{(1+R)^2} + \cdots + \frac{CF_n}{(1+R)^n}
+     \]
+
+3. **实例应用**  
+   1. **问题**：若需在未来4年每年提取\$100（年利率5%），当前需存入多少？  
+   2. **解答**：  
+      1. 现金流：第1-4年每年末提取\$100（CF₁=CF₂=CF₃=CF₄=100）。  
+         1. 现值计算：  
+       \[
+       PV = \frac{100}{1.05^1} + \frac{100}{1.05^2} + \frac{100}{1.05^3} + \frac{100}{1.05^4} \approx 354.60
+       \]
+      2. **结论**：当前需存入\$354.60，以每年5%复利支撑未来提款。
+
+#### 3. 扩展理解
+
+1. **现值的多重含义**  
+   1. 未来现金流的当前价值。  
+   2. 获得未来现金流的合约当前价格。  
+   3. 隐含假设：贴现率R在期间恒定（实际中可能变化，后续课程涉及利率期限结构）。
+
+2. **动态过程验证**  
+   1. 初始存入\$354.60，每年赚取5%利息并提取\$100：  
+      1. 第1年末：\$354.60×1.05 = \$372.33 → 提款$100 → 剩余\$272.33 
+      2. 第2-4年重复计算，最终余额归零，验证现值准确性。
 
 ---
 
-#### **关键结论**
-1. **核心规则**  
-   - **禁止直接加减不同时间点的现金流**，必须通过折现率转换到同一时间单位（如现值或终值）。
+#### 关键结论
 
-2. **折现率的本质**  
-   - 折现率体现资本的机会成本，需根据现金流风险匹配市场回报率。高风险项目需使用更高折现率。
-
-3. **动态过程与假设**  
-   - 例题中账户余额的动态变化（利息累积与提款）验证了现值的准确性，确保资金在最后一期耗尽。  
-   - **隐含假设**：默认折现率恒定（后续课程将探讨利率期限结构的变化）。
-
-4. **现值的多重解释**  
-   - 现值既是未来现金流的当前价值，也是购买该现金流合约的“今日价格”。
+1. **核心原则**：**货币具有时间单位**，必须通过贴现统一时间维度后再操作。  
+2. **工具习惯**：  
+   1. 使用时间轴明确现金流时序。  
+   2. 用贴现因子转换跨期现金流。  
+3. **贴现率选择**：需匹配现金流风险（高风险现金流对应更高R）。  
+4. **应用场景**：储蓄规划、投资估值、贷款定价等需跨期分析的财务决策。
 
 ---
 
-#### **应用示例**
-**问题**：若需在未来4年每年提取$100，当前需存入多少钱（年利率5%）？  
-**步骤**：
-1. 绘制时间轴，标注各期提款（CF₁=CF₂=CF₃=CF₄= -$100）。
-2. 计算每期现金流的现值：  
-   \( PV_1 = \frac{100}{1.05^1}, PV_2 = \frac{100}{1.05^2}, \ldots \)
-3. 汇总现值：$95.24 + $90.70 + $86.38 + $82.27 = **$354.60**。
+### 附录：字幕
 
----
-
-#### **后续方向**
-下一讲将探讨**复利（Compounding）**，即如何将当前现金流向前移动计算未来价值，完善货币时间价值的双向分析工具。
-
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 1: Time Value of Money
@@ -103,3 +124,4 @@ But what's going on in the background? How is this working? What's actually happ
 And if we continue this process for the next three years, two, three and four, what we see is we're going to exactly offset or exactly exhaust the funds in the account.
 
 Okay, so let's summarize what we learned today. Rule number one, never add or subtract cash flows from different time periods. You'll want to do it. Don't do it. What we need to do is recognize that money has time unit, and in order to add money at different points in time, we need to convert that money to a common base unit using an exchange rate for time called our discount factor. We're also going to get into a habit of using a time line to get our bearings straight, a visual representation of when money is moving in or out. And we learned about the present value of a cash flow. It tells us the value of future cash flow as of some earlier time period. It also tells us the price of a claim to those cash flows. And what's coming up next? We're going to go to the other direction, moving cash flows forward, in other words, compounding. Thanks for listening, and I look forward to seeing you in the next lecture.
+```
